--- a/app/assets/stylesheets/employee/add_bank_details.css
+++ b/app/assets/stylesheets/employee/add_bank_details.css
@@ -120,7 +120,7 @@
     width:206px;
 }
 #errorExplanation1 {
-   background: #ffdedf url(/images/_global/error.png) no-repeat 10px 14px;
+   background: #ffdedf url(/assets/_global/error.png) no-repeat 10px 14px;
     -moz-border-radius:10px;
     border-radius:10px;
     -webkit-border-radius:10px;
