--- a/app/assets/stylesheets/finance/expense_list.css
+++ b/app/assets/stylesheets/finance/expense_list.css
@@ -24,7 +24,7 @@
 
 .errorExplanation {
     -moz-border-radius: 10px 10px 10px 10px;
-    background: url("/images/_global/error.png") no-repeat scroll 10px 14px #FFDEDF;
+    background: url("/assets/_global/error.png") no-repeat scroll 10px 14px #FFDEDF;
     height: auto;
     margin: 26px auto;
     padding: 10px 10px 21px 43px;
