--- a/app/assets/stylesheets/grading_levels/index.css
+++ b/app/assets/stylesheets/grading_levels/index.css
@@ -3,7 +3,7 @@
 
 }
 
-.label-field-pair label { 
+.label-field-pair label {
     width:108px;
 }
 
@@ -45,7 +45,7 @@
 
 }
    #error-box {
-    background: #ffdedf url(/images/_global/error.png) no-repeat 10px 14px;
+    background: #ffdedf url(/assets/_global/error.png) no-repeat 10px 14px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     height : auto;
