--- a/app/assets/stylesheets/rtl/batch_transfers/subject_transfer.css
+++ b/app/assets/stylesheets/rtl/batch_transfers/subject_transfer.css
@@ -172,7 +172,7 @@ p.flash-msg {
 }
 
 #error-box {
-    background: #ffdedf url(/images/_global/error.png) no-repeat 10px 14px;
+    background: #ffdedf url(/assets/_global/error.png) no-repeat 10px 14px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     height : auto;
