--- a/app/assets/stylesheets/subjects/index.css
+++ b/app/assets/stylesheets/subjects/index.css
@@ -148,7 +148,7 @@ h5{
 }
 
 #error-box {
-    background: #ffdedf url(/images/_global/error.png) no-repeat 10px 14px;
+    background: #ffdedf url(/assets/_global/error.png) no-repeat 10px 14px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     height : auto;
