--- a/app/assets/stylesheets/finance/fee_discount_new.css
+++ b/app/assets/stylesheets/finance/fee_discount_new.css
@@ -2,7 +2,7 @@
     width:457px;
 }
 #error-box {
-    background: url("/images/_global/error.png") no-repeat scroll 10px 14px #FFDEDF;
+    background: url("/assets/_global/error.png") no-repeat scroll 10px 14px #FFDEDF;
     border-radius: 10px 10px 10px 10px;
     height: auto;
     margin: 18px auto 18px 0;
