--- a/app/assets/stylesheets/rtl/employee/subject_assignment.css
+++ b/app/assets/stylesheets/rtl/employee/subject_assignment.css
@@ -77,7 +77,7 @@
 
 .errorExplanation {
     -moz-border-radius: 10px 10px 10px 10px;
-    background: url("/images/_global/error.png") no-repeat scroll 10px 14px #FFDEDF;
+    background: url("/assets/_global/error.png") no-repeat scroll 10px 14px #FFDEDF;
     height: auto;
     margin: 20px 185px 20px auto;
     padding: 10px 20px 20px 0;
