--- a/app/assets/stylesheets/rtl/student/remove.css
+++ b/app/assets/stylesheets/rtl/student/remove.css
@@ -43,7 +43,7 @@
 
 
 .errorExplanation {
-    background: url("/images/_global/error.png") no-repeat scroll 10px 14px #FFDEDF;
+    background: url("/assets/_global/error.png") no-repeat scroll 10px 14px #FFDEDF;
     border-radius: 10px 10px 10px 10px;
     height: auto;
     margin: 20px auto;
