--- a/app/views/calendar/index.html.haml
+++ b/app/views/calendar/index.html.haml
@@ -16,6 +16,8 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
+= stylesheet_link_tag("calendar/index.css")
 #tooltip_box
   .image_loading
     = image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader",:style =>"display: none; float:left;" )
