--- a/app/views/event/edit_event.haml
+++ b/app/views/event/edit_event.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("event/edit_event.css")
 #content-header
   = image_tag("manage_news/manage_news_logo.png")
   %h1= t('events')
@@ -24,18 +25,18 @@
     = back_button
 #page-yield
   = flash[:notice]
-  = form_for :event do |f|
-    = error_messages_for 'event'
+  = form_for :events, :url=>{:id => @events.id} do |f|
+    = error_messages_for 'events'
     .label-field-pair
       %label{:for => "start-date"}
         = t('start_date')
         \:
-      .text-input-bg= calendar_date_select_tag "event[start_date]", I18n.l(@event.start_date.to_date,:format=>("%Y-%m-%d %H:%M")), :time => true, :readonly=>true, :popup=>"force"
+      .text-input-bg= date_select "events[start_date]", I18n.l(@events.start_date.to_date,:format=>("%Y-%m-%d %H:%M")), :time => true, :readonly=>true, :popup=>"force"
     .label-field-pair
       %label{:for => "end-date"}
         = t('end_date')
         \:
-      .text-input-bg= calendar_date_select_tag "event[end_date]", I18n.l(@event.end_date.to_date,:format=>("%Y-%m-%d %H:%M")), :time => true , :readonly=>true, :popup=>"force"
+      .text-input-bg= date_select "events[end_date]", I18n.l(@events.end_date.to_date,:format=>("%Y-%m-%d %H:%M")), :time => true , :readonly=>true, :popup=>"force"
     .label-field-pair
       %label{:for => "title"}
         = t('title')
