--- a/app/views/event/index.haml
+++ b/app/views/event/index.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("event/index.css")
 #content-header
   = image_tag("manage_news/manage_news_logo.png")
   %h1= t('event_text')
@@ -30,12 +31,12 @@
       %label{:for => "start-date"}
         = t('start_date')
         \:
-      .text-input-bg= calendar_date_select_tag 'events[start_date]', I18n.localize(@start_date || @date, :format=>("%Y-%m-%d %H:%M")), :time => true , :readonly=>true, :popup=>"force"
+      .text-input-bg= date_select 'events[start_date]', I18n.localize(@start_date || @date, :format=>("%Y-%m-%d %H:%M")), :time => true , :readonly=>true, :popup=>"force"
     .label-field-pair
       %label{:for => "end-date"}
         = t('end_date')
         \:
-      .text-input-bg= calendar_date_select_tag 'events[end_date]', I18n.localize(@end_date || @date, :format=>("%Y-%m-%d %H:%M")), :time => true , :readonly=>true, :popup=>"force"
+      .text-input-bg= date_select 'events[end_date]', I18n.localize(@end_date || @date, :format=>("%Y-%m-%d %H:%M")), :time => true , :readonly=>true, :popup=>"force"
     .label-field-pair
       %label{:for => "title"}
         = t('title')
