--- a/app/views/event/show.haml
+++ b/app/views/event/show.haml
@@ -16,8 +16,9 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("event/show.css")
 #content-header
-  = image_tag("  manage_news/manage_news_logo.png")
+  = image_tag("manage_news/manage_news_logo.png")
   %h1= t('event_text')
   %h3= t('confirmation')
   #app-back-button
