--- a/app/views/employee_attendances/_attendance_cell.html.haml
+++ b/app/views/employee_attendances/_attendance_cell.html.haml
@@ -18,10 +18,9 @@
 - #under the License.
 - @absent = EmployeeAttendance.find_by_employee_id_and_attendance_date(@employee.id, @date)
 - unless @absent.nil?
-  = link_to_remote('X', {:url => edit_employee_attendance_path(@absent), :method => 'get'}, :class=>'absent themed_text')
+  = link_to('X', {:controller =>'employee_attendances', :action => 'edit', :id=> @absent, :remote => true}, :class=> 'absent themed_text')
 - else
-  = link_to_remote('O',                                                                                                        |
-    {:url => {:controller =>'employee_attendances', :action => 'new', :id=> @date, :id2 => @employee.id}}, :class=> 'present') |
+  = link_to('O', {:controller =>'employee_attendances', :action => 'new', :id=> @date, :id2 => @employee.id, :remote=> true}, :class => 'present')
 .date
   %span.themed_text
     = @date
