--- a/app/views/employee_attendances/_new.html.haml
+++ b/app/views/employee_attendances/_new.html.haml
@@ -16,12 +16,15 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
+= csrf_meta_tag
 %label.head_label
   = t('attendance_for')
   %span= @employee.first_name
+#form-errors
 #ajax-edit
-  #form-errors
-  - form_remote_for @attendance do |f|
+  #form-error
+  = form_for(@attendance, :remote => true) do |f|
     = f.hidden_field :employee_id, :value => @employee.id
     = f.hidden_field :attendance_date, :value => @date
     %br/
@@ -37,5 +40,5 @@
         = f.check_box :is_half_day, :checked => false
         = t('half_day')
     .extender
-    = f.submit "#{t('submit')}", :class => 'submit-button', :confirm => "#{t('delete_confirm_msg')}"
-  #form-errors
+    = f.submit "#{t('submit')}", :class => 'submit-button'
+  
