--- a/app/views/employee_attendances/index.html.haml
+++ b/app/views/employee_attendances/index.html.haml
@@ -16,8 +16,11 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= javascript_include_tag :application
+= javascript_include_tag :modalbox
+= stylesheet_link_tag("employee_attendances/index.css")
 #content-header
-  = image_tag("  attendence/attendence.png")
+  = image_tag("attendence/attendence.png")
   %h1= t('attendance')
   %h3= t('attendance_register')
   #app-back-button
@@ -32,13 +35,7 @@
     %label{:for => "employee_department_select"}= t('select_the_department')
     = image_tag("loader.gif", :align => "absmiddle", :border => 0, :id => "loader", :style =>"display: none;" )
     .text-input-bg
-      = select :batch, :id,                           |
-        @departments.map {|b| [b.name, b.id] },       |
-        {:prompt => "#{t('select_the_department')}"}, |
-        {:onchange => "#{remote_function(             |
-        :url => { :action => 'show' },                |
-        :with => "'dept_id='+value",                  |
-        :before => "Element.show('loader')",          |
-        :success => "Element.hide('loader')"  )}"}    |
+      = select :batch, :id, @departments.map {|b| [b.name, b.id] },{:prompt => "#{t('select_the_department')}"},
+      {onChange: "onChangeRequest(this, '#{url_for(controller: :employee_attendances, action: :show_dept, dept_id: 'paramid')}')" }
   #register
-  #modal-box{:style => "display:none;"}
+  #modal-box
