--- a/app/views/employee_attendance/update_attendance_report.js.haml
+++ b/app/views/employee_attendance/update_attendance_report.js.haml
@@ -1,4 +1,4 @@
 - if params[:department_id].blank?
-  $('#attendance_report').html("#{escape_javascript text: ''}")
+  $('#attendance_report').html("#{escape_javascript ''}")
 $('#attendance_report').html("#{escape_javascript render 'attendance_report'}")
     
