--- a/app/views/employee_attendance/apply_leave.haml
+++ b/app/views/employee_attendance/apply_leave.haml
@@ -25,6 +25,7 @@
     jQuery("#leave_apply_end_date").datepicker({ dateFormat : 'yy-mm-dd', yearRange : '-5:+5' });
     jQuery("#leave_apply_start_date").change(function(){ jQuery("#leave_apply_end_date").val(jQuery(this).val()); });
   });
+= stylesheet_link_tag("employee_attendance/apply_leave.css")
 #content-header
   = image_tag("HR/leave-new.png")
   %h1= t('leave_management')
