--- a/app/views/employee_attendance/employee_leave_reset_all.haml
+++ b/app/views/employee_attendance/employee_leave_reset_all.haml
@@ -17,6 +17,7 @@
 - #specific language governing permissions and limitations
 - #under the License.
 = javascript_include_tag :application
+= stylesheet_link_tag("employee_attendance/employee_leave_reset_all.css")
 #content-header
   = image_tag("HR/leave-new.png")
   %h1= t('full_leave_reset')
