--- a/app/views/employee_attendance/index.html.haml
+++ b/app/views/employee_attendance/index.html.haml
@@ -16,8 +16,9 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("employee_attendance/index.css")
 #content-header
-  = image_tag("  attendence/attendence.png")
+  = image_tag("attendence/attendence.png")
   %h1= t('employee_attendance_text')
   %h3= t('home')
   #app-back-button
