--- a/app/views/employee_attendance/manual_reset.haml
+++ b/app/views/employee_attendance/manual_reset.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("employee_attendance/manual_reset.css")
 #content-header
   = image_tag("  HR/leave-new.png")
   %h1= t('manual_leave_reset')
