--- a/app/views/employee_attendance/register.haml
+++ b/app/views/employee_attendance/register.haml
@@ -23,6 +23,7 @@
   $jq(document).ready(function() {
     $jq("#date").datepicker({dateFormat: 'yy-mm-dd'});
   });
+= stylesheet_link_tag("employee_attendance/register.css")
 #content-header
   = image_tag("attendence/attendence.png")
   %h1= t('employee_attendance_text')
