--- a/app/views/employee_attendance/report.haml
+++ b/app/views/employee_attendance/report.haml
@@ -17,6 +17,7 @@
 - #specific language governing permissions and limitations
 - #under the License.
 = javascript_include_tag :application
+= stylesheet_link_tag("employee_attendance/report.css")
 #content-header
   = image_tag("attendence/attendence.png")
   %h1= t('employee_attendance_text')
